2011-07-30  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/find_new_uid.c: free (used_uids) on return.
	* libmisc/find_new_gid.c: free (used_gids) on return.

2011-07-28  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/commonio.c: Fix NIS commit from 2011-07-14.

2011-07-28  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/chpasswd.c: Create a shadow entry if the password is
	set to 'x' in passwd and there are no entry in shadow for the
	user.
	* NEWS, src/chgpasswd.c: Create a gshadow entry if the password is 
	set to 'x' in group and there are no entry in gshadow for the 
	group.

2011-07-28  Nicolas François  <nicolas.francois@centraliens.net>

	* src/pwunconv.c: Exit after printing usage when arguments or
	options are provided.
	* src/pwunconv.c: Re-indent.
	* src/pwunconv.c: Open the shadow file read only.
	* src/grpunconv.c: Exit after printing usage when arguments or
	options are provided.
	* src/grpunconv.c: Open the gshadow file read only.

2011-07-28  Nicolas François  <nicolas.francois@centraliens.net>

	* src/chgpasswd.c: Fix typo.

2011-07-23  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/login.c: Do not log in utmp / utmpx / wtmp when PAM is
	enabled. This is already done by pam_lastlog. Note that
	pam_lastlog can only log the parent PID, not the PID of the
	process forked by login.

2011-07-23  Nicolas François  <nicolas.francois@centraliens.net>

	* src/chpasswd.c: Add annotations to indicate that usage() does
	not return.
	* src/chpasswd.c: Reindent.
	* src/chpasswd.c: Remove dead code. No need to set crypt_method
	to NULL when it is already NULL. sflg is only set if crypt_method
	is not NULL.

2011-07-23  Nicolas François  <nicolas.francois@centraliens.net>

	* src/lastlog.c: Add annotations to indicate that usage() does not
	return.

2011-07-23  Nicolas François  <nicolas.francois@centraliens.net>

	* src/faillog.c: Add annotations to indicate that usage() does not
	return.