@@ -1,5 +1,11 @@
 2011-07-30  Nicolas François  <nicolas.francois@centraliens.net>
 
+	* src/usermod.c: Add annotations to indicate that fail_exit() does
+	not return.
+	* src/usermod.c: Fix typo in notreached annotation.
+
+2011-07-30  Nicolas François  <nicolas.francois@centraliens.net>
+
 	* libmisc/find_new_uid.c: free (used_uids) on return.
 	* libmisc/find_new_gid.c: free (used_gids) on return.
 
